# fw-lights

./: .gitignore  Cargo.toml  flake.nix  module.nix
src/: animations.rs  config.rs  daemon.rs  display_thread.rs  lib.rs  main.rs  proto.rs
src/animations/: builder.rs  file.rs  spread.rs
